# Amstrad-Learning-Environment

./: README.md
src/: useful_cmd.txt
src/Amstrad-Learning-Environment/doc/: doxygen.config  mainpage.dox
src/Amstrad-Learning-Environment/doc/html/: _data_fetcher_8cpp.html  _data_fetcher_8h.html  _data_fetcher_8h_source.html  _input_reader_8cpp.html  _input_reader_8h.html  _input_reader_8h_source.html  _memory_reader_8cpp.html  _memory_reader_8h.html  _memory_reader_8h_source.html  amle__interface_8cpp.html  amle__interface_8h.html  amle__interface_8h_source.html  annotated.html  class_data_fetcher-members.html  class_data_fetcher.html  class_input_reader-members.html  class_input_reader.html  class_memory_reader-members.html  class_memory_reader.html  classamle_1_1_am_l_e_interface-members.html  classamle_1_1_am_l_e_interface.html  classes.html  dir_6447c25bbaf07eb03d42cb0d4878272f.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  menudata.js  namespaceamle.html  namespaces.html
src/Amstrad-Learning-Environment/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js  variables_0.js
src/Amstrad-Learning-Environment/doc/latex/: _data_fetcher_8cpp.tex  _data_fetcher_8h.tex  _input_reader_8cpp.tex  _input_reader_8h.tex  _memory_reader_8cpp.tex  _memory_reader_8h.tex  amle__interface_8cpp.tex  amle__interface_8h.tex  annotated.tex  class_data_fetcher.tex  class_input_reader.tex  class_memory_reader.tex  classamle_1_1_am_l_e_interface.tex  dir_6447c25bbaf07eb03d42cb0d4878272f.tex  files.tex  main_8cpp.tex  namespaceamle.tex  namespaces.tex  refman.tex
src/Amstrad-Learning-Environment/src/: CMakeLists.txt  Changes.txt  MANIFEST.in  README.md  amle-tests  main.cpp  setup.py  test.py
src/Amstrad-Learning-Environment/src/SupportedGames/: arkanoid.data  buggy.data
src/Amstrad-Learning-Environment/src/amle/: AddressRange.h  CPCScreen.h  DataFetcher.cpp  DataFetcher.h  GameInfo.cpp  GameInfo.h  InputReader.cpp  InputReader.h  MemoryReader.cpp  MemoryReader.h  MemoryUtils.cpp  MemoryUtils.h  StorageType.h  SupportedGamesUtils.cpp  SupportedGamesUtils.h  amle_interface.cpp  amle_interface.h  cap32Dup.cpp  cap32Variables.h
src/Amstrad-Learning-Environment/src/amle_py/: __init__.py  amle_c_wrapper.cpp  amle_c_wrapper.h  amle_python_interface.py
src/Amstrad-Learning-Environment/src/amle_py/data/SupportedGames/: buggy.data
src/Amstrad-Learning-Environment/src/common/: constants.h
src/Amstrad-Learning-Environment/src/disk/: Arkanoid.dsk
src/Amstrad-Learning-Environment/src/emucore/: CapriceAbout.cpp  CapriceLoadSave.cpp  CapriceMemoryTool.cpp  CapriceMenu.cpp  CapriceOptions.cpp  CapriceOptions.h  CapriceRomSlots.cpp  CapriceVKeyboard.cpp  argparse.cpp  asic.cpp  cap32.cpp  cap32.h  cap32Dup.cpp  cap32Dup.h  cap32Variables.cpp  cap32Variables.h  crtc.cpp  fdc.cpp  font.cpp  font.h  glfuncs.h  ipf.cpp  ipf.h  keyboard.cpp  keyboard.h  psg.cpp  rom_mods.cpp  rom_mods.h  savepng.cpp  slotshandler.cpp  tape.cpp  video.cpp  video.h  wg_application.cpp  wg_application.h  wg_color.h  wg_message.h  wg_message_server.h  wg_painter.h  wg_rect.h  (+7 more)
src/Amstrad-Learning-Environment/src/snap/: arka.sna
src/Amstrad-Learning-Environment/src/test/: TestAmle.cpp  TestAmle.h  TestInputReader.cpp  TestInputReader.h  _TestInputReader.cpp  _TestInputReader.h  mainTest.cpp  testPython.py
src/OpenAIGymEnvs/: README.md  setup.py  test.py
src/OpenAIGymEnvs/disk/: arka.dsk  buggy.dsk
src/OpenAIGymEnvs/gym-cap32/: setup.py  test.py
src/OpenAIGymEnvs/gym-cap32/gym_cap32/: __init__.py
src/OpenAIGymEnvs/gym-cap32/gym_cap32.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/OpenAIGymEnvs/gym-cap32/gym_cap32/envs/: __init__.py  cap32_env.py  cap32_extrahard_env.py
src/OpenAIGymEnvs/gym_cap32/: __init__.py
src/OpenAIGymEnvs/gym_cap32/envs/: cap32_env.py  cap32_extrahard_env.py
src/OpenAIGymEnvs/snap/: buggy.sna
